updated index file

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
       </thead>
       <tbody>
         <tr>
-          <td>2010-2015</td>
-          <td>app brew</td>
+          <td>2010-2019</td>
+          <td>School</td>
         </tr>
         <tr>
-          <td>2015-2018</td>
-          <td>teached at DTU</td>
+          <td>2019-2023</td>
+          <td>Student at DTU</td>
         </tr>
       </tbody>
     </table>
